--- a/package.json
+++ b/package.json
@@ -7,16 +7,32 @@
     "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "versioning": "changeset"
+    "versioning": "changeset",
+    "benchmark:setup": "./benchmarks/scripts/setup.sh",
+    "benchmark:run": "./benchmarks/scripts/run-hyperfine.sh",
+    "benchmark:cold": "./benchmarks/scripts/run-hyperfine.sh --without-cache",
+    "benchmark:warm": "./benchmarks/scripts/run-hyperfine.sh --with-cache",
+    "benchmark:clear": "./benchmarks/scripts/clear-cache.sh",
+    "benchmark:analyze": "./benchmarks/scripts/analyze-bundles.sh"
   },
   "devDependencies": {
     "@changesets/cli": "2.28.1",
+    "@rsbuild/core": "^1.7.2",
+    "@rspack/cli": "^1.7.3",
+    "@rspack/core": "^1.7.3",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "22.14.0",
+    "autoprefixer": "^10.4.23",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
     "prettier": "3.5.3",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.18",
+    "tsup": "8.4.0",
     "turbo": "2.5.0",
     "typescript": "5.8.2",
-    "tsup": "8.4.0",
-    "vite": "5.4.14",
+    "vite": "7.3.1",
     "vitest": "2.1.9"
   },
   "packageManager": "pnpm@9.0.0",
